# Updater

./: .gitattributes  .gitignore  README.md  make_executable.bat  make_executable.py  pyproject.toml  requirements-devel.txt  requirements.txt  update.py
src/updater/: update.py
src/updater_rs/: Cargo.toml
updater/src/: main.rs
updater/updater/: CMakeLists.txt  main.cpp
