[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[project]
name = "updater"
dynamic = ["version", "dependencies"]
authors = [
    { name = "Daniel Kratzert", email = "dkratzert@gmx.de" },
]
description = "A program to model disorder in small-molecule X-ray structures"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage" = "https://github.com/dkratzert/updater"
"Bug Tracker" = "https://github.com/dkratzert/updater/issues"

[tool.hatch.version]
path = "src/updater/version.py"
pattern = "version\\s*=\\s*(?P<version>\\d+\\.{0,1}\\d{0,1})"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/tests",
    "/venv*",
]

[project.scripts]
tiny_updater = "updater.update:fetch_update"